--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "f_weather",
   "version": "0.1.0",
-  "homepage": "https://byiringiro-saad.github.io/F_Weather/",
+  "homepage": "https://byiringiro-saad.github.io/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
